<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_light_gazebo</name>
  <version>0.0.0</version>
  <description>Traffic Light Plugin</description>
  <maintainer email="fe-mehmetemre@gmail.com">emre</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
